--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ node_js:
   - 0.10
 
 script: "harp compile _website _built_website"
+
 after_success:
-- ls
-- ls utility
-- source ./utility/initiate-publish.sh
+  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://${GH_TOKEN}:@github.com" > .git/credentials
+  - source ./utility/initiate-publish.sh
